cmake_minimum_required(VERSION 3.14)
PROJECT(czm_demo)

SET( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -g -O3 -Wall" )
SET( CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/CMakeFiles )  

FIND_PACKAGE(OpenGL REQUIRED)
FIND_PACKAGE(GLUT REQUIRED)
#FIND_PACKAGE(FREEGLUT REQUIRED)

INCLUDE_DIRECTORIES( ${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_BINARY_DIR} ${PROJECT_SOURCE_DIR} ${OPENGL_INCLUDE_DIRS} ${GLUT_INCLUDE_DIRS} )
#INCLUDE_DIRECTORIES( ${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_BINARY_DIR} ${PROJECT_SOURCE_DIR} ${OPENGL_INCLUDE_DIRS} ${FREEGLUT_INCLUDE_DIRS} "/usr/include/SOIL" )

SET( HEADERS CZM.h Materials.h Grid.h Blocks.h GroundMotion.h CohesiveZone.h CohesiveZoneManager.h stb/stb_image.h )
SET( CPP czm_demo.cpp )

ADD_EXECUTABLE( czm_demo ${CPP} )

TARGET_LINK_LIBRARIES( czm_demo ${OPENGL_LIBRARIES} ${GLUT_LIBRARIES} )
#TARGET_LINK_LIBRARIES( czm_demo ${OPENGL_LIBRARIES} ${FREEGLUT_LIBRARIES} "/usr/lib/libSOIL.a" )
